# Image-Align-Tool

./: .gitignore  CMakeLists.txt  CaliLite_zh_CN.ts  ImageUtils.cpp  ImageUtils.h  ImageUtils.ui  README.md  TestGraphicsView.cpp  TestGraphicsView.h  drawingpapereditor.cpp  drawingpapereditor.h  main.cpp  mylib.cpp  mylib.h
.github/workflows/: cmake-multi-platform.yml  cmake-windows.yml
